@@ -1,0 +1,72 @@
+package de.fu_berlin.inf.gmanda.gui.actions;
+
+import java.awt.event.ActionEvent;
+import java.io.File;
+
+import javax.swing.AbstractAction;
+import javax.swing.tree.TreePath;
+
+import org.picocontainer.annotations.Inject;
+
+import de.fu_berlin.inf.gmanda.gui.PrimaryDocumentTree;
+import de.fu_berlin.inf.gmanda.gui.manager.CommonService;
+import de.fu_berlin.inf.gmanda.gui.misc.DotFileFileChooser;
+import de.fu_berlin.inf.gmanda.imports.GmaneFacade;
+import de.fu_berlin.inf.gmanda.proxies.ProjectProxy;
+import de.fu_berlin.inf.gmanda.qda.PrimaryDocument;
+import de.fu_berlin.inf.gmanda.qda.Project;
+import de.fu_berlin.inf.gmanda.util.VariableProxyListener;
+
+public class ComputeEmailStatisticsAction extends AbstractAction {
+
+	@Inject
+	PrimaryDocumentTree tree;
+
+	@Inject
+	CommonService commonService;
+
+	@Inject
+	DotFileFileChooser dotFileChooser;
+
+	@Inject
+	GmaneFacade facade;
+
+	public ComputeEmailStatisticsAction(ProjectProxy project) {
+		super("Compute Email Statistics...");
+
+		project.add(new VariableProxyListener<Project>() {
+			public void setVariable(Project newValue) {
+				setEnabled(newValue != null);
+			}
+		});
+	}
+
+	public void actionPerformed(ActionEvent arg0) {
+
+		commonService.run(new Runnable() {
+			public void run() {
+
+				TreePath path = tree.getSelectionPath();
+
+				if (path == null)
+					return;
+
+				Object o = path.getLastPathComponent();
+
+				if (o == null || !(o instanceof PrimaryDocument))
+					return;
+
+				PrimaryDocument pd = (PrimaryDocument) o;
+
+				File dotFile = dotFileChooser.getOpenFile();
+
+				if (dotFile == null)
+					return;
+
+				facade.printEmailStatistics(pd, dotFile, commonService
+						.getProgressBar("Calculate Project Statistics"));
+			}
+		}, "Error in computing thread statistics:");
+
+	}
+}
