@@ -2,6 +2,7 @@
 2009-06-03
 
    * [FIX] An empty filter will now return all documents
+   * [FEATURE] Functionality added to print summary statistics regarding email written
 
 2009-05-19
 
